removing config